--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "cms",
     "version": "0.1.0",
     "private": true,
-    "homepage": "https://vosap2007.github.io/cms",
+    "homepage": "https://vosap2007.github.io/cms/",
     "dependencies": {
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
